maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:65: error: not found: value min
    noteIndication(x, y-1, min+1);
                           ^ShortestPathMaze:67: error: not found: value min
  if (x<n && getIndication(x+1,y) > min && !aMurOuest(x+1,y)) noteIndication(x+1, y, min+1);
                                    ^ShortestPathMaze:67: error: not found: value min
  if (x<n && getIndication(x+1,y) > min && !aMurOuest(x+1,y)) noteIndication(x+1, y, min+1);
                                                                                     ^ShortestPathMaze:68: error: not found: value min
  if (y<m && getIndication(x,y+1) > min && !aMurNord(x,y+1)) noteIndication(x, y+1, min+1);
                                    ^ShortestPathMaze:68: error: not found: value min
  if (y<m && getIndication(x,y+1) > min && !aMurNord(x,y+1)) noteIndication(x, y+1, min+1);
                                                                                    ^ShortestPathMaze:69: error: not found: value min
  if (x>0 && getIndication(x-1,y) > min && !aMurOuest(x,y)) noteIndication(x-1, y, min+1);
                                    ^ShortestPathMaze:69: error: not found: value min
  if (x>0 && getIndication(x-1,y) > min && !aMurOuest(x,y)) noteIndication(x-1, y, min+1);
                                                                                   ^